--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@babel/core": "^7.2.2",
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0"
+    "@babel/preset-react": "^7.0.0",
+    "nodemon": "^1.18.9"
   },
   "dependencies": {
     "@babel/runtime": "^7.9.2",
@@ -33,7 +34,6 @@
     "mjml": "^4.3.1",
     "mjml-react": "^1.0.45",
     "moment": "^2.24.0",
-    "nodemon": "^1.18.9",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   }
